feat: configure Spring Security with JWT authentication and custom security filter chain (#6)
Co-authored-by: prathamesh <prathameshkamte@gmail.com>